# panepon

./: ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  arch.drawio  hie.yaml  panel.drawio  panepon  panepon.cabal
app/: Main.hs
src/Panepon/: Board.hs  Cursor.hs  Env.hs  Game.hs  Grid.hs  Panel.hs  Read.hs  Render.hs  Rule.hs  TUI.hs
src/Panepon/TUI/: Main.hs  Render.hs
