cabal-version:      2.4
name:               panepon
version:            0.1.0.0
synopsis:           panepon (a.k.a. tetris attack) clone

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             matonix
maintainer:         automatonix@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    , base   ^>=4.14.1.0
    , brick
    , vty
    , microlens
    , microlens-th

executable panepon
  import:         shared-properties
  main-is:        Main.hs
  build-depends:  panepon
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts

library
  import:          shared-properties
  exposed-modules:
    Panepon.Board
    Panepon.Cursor
    Panepon.Env
    Panepon.Game
    Panepon.Grid
    Panepon.Panel
    Panepon.Read
    Panepon.Render
    Panepon.TUI

  hs-source-dirs:  src
